styles author-bio-text h2

--- a/pages/project3.html
+++ b/pages/project3.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Genny Allison | AI Content Creator & SEO Specialist for High-Performance Websites</title>
-
-    <meta name="description" content="Explore Genny Allison's portfolio project: a fully optimized, AI-driven sports blog that achieved perfect SEO and performance scores. Built with AI tools like ChatGPT and MidJourney, this site demonstrates expertise in AI content, SEO strategy, and web performance optimization.">
-
+    <title>AI Content Creator & SEO Specialist Portfolio | Sports Blog with 100 SEO Score</title>
+    <meta name="description" content="Discover how Genny Allison built a high-performance, AI-powered sports blog with a perfect 100 SEO score. This case study showcases expert content strategy, web performance, and SEO optimization using tools like ChatGPT, MidJourney, and PageSpeed Insights.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
     <link 
@@ -86,7 +84,7 @@
             <article class="resume-border">  
               <div class="resume-summary">
                 <h2>AI Content Creator & SEO Specialist Portfolio Project</h2>
-                <p>The Sports Tube Community Blog is a high-performance, AI-driven platform built to unite sports fans through SEO-optimized articles and immersive visuals. This project showcases my specialty in using artificial intelligence for content creation, search engine strategy, and front-end performance tuning.</p>
+                <p>The Sports Tube Community Blog is a high-performance, AI-driven platform built to unite sports fans through SEO-optimized articles and immersive visuals. This project showcases my specialty in using AI-generated content for websites, search engine strategy, and front-end performance tuning.</p>
                 <p>Leveraging advanced AI tools such as ChatGPT for content generation and MidJourney for imagery, the site features high-quality articles and visuals that resonate with its target audience. Custom visuals and animations, enhanced using Canva and Figma, contribute to its professional aesthetic, while tools like Relume.io supported the creation of an intuitive and seamless user interface.</p>
                 <p>The site achieved perfect SEO scores of 100 on both mobile and desktop, showcasing exceptional performance, accessibility, and user engagement. Hosted on Netlify, it serves as a shining example of the transformative potential of artificial intelligence in digital media and content strategy.</p> 
               </div>
@@ -453,13 +451,13 @@
                 <div class="border-white">
                   <img
                     src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,dpr_auto,w_1500/v1746533977/website-design-sports-tube-community_uxq13m.png"
-                      alt="Website design concept for Sports Tube Community, featuring a blend of modern and retro design elements that reflect the blog's focus on sports and the sports community."
-                      width="501"
-                      height="410"
-                      loading="lazy"
-                      fetchpriority="low"
-                      style="object-fit: cover;aspect-ratio: 501 / 410;"
-                      decoding="async"                  
+                    alt="Website design concept for Sports Tube Community, featuring a blend of modern and retro design elements that reflect the blog's focus on sports and the sports community."
+                    width="501"
+                    height="410"
+                    loading="lazy"
+                    fetchpriority="low"
+                    style="object-fit: cover;aspect-ratio: 501 / 410;"
+                    decoding="async"                  
                   />
                 </div>
               </div>
@@ -495,11 +493,11 @@
                   <img src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1746534493/sports-tube-community_vn8pep.png"
                     alt="An image showing a group of people possibly discussing sports."
                     width="501"
-                      height="410"
-                      loading="lazy"
-                      fetchpriority="low"
-                      style="object-fit: cover;aspect-ratio: 501 / 410;"
-                      decoding="async"      
+                    height="410"
+                    loading="lazy"
+                    fetchpriority="low"
+                    style="object-fit: cover;aspect-ratio: 501 / 410;"
+                    decoding="async"      
                   >
                 </div>
               </div>
@@ -618,8 +616,7 @@
               <div class="resume-summary casestudy-container">
                 <div class="casestudy">
                   <p><strong>Case Study: </strong>Sports Tube Community</p>
-                  <p><strong>Role: </strong>Full-Stack Developer, AI Content Creator, SEO Specialist, AI-Powered Journalist</p>
-                  <p><strong>Website: </strong> <a href="https://sports-tube-community.netlify.app/" style="text-decoration: underline;">Sports Tube Community</a></p>
+                  <p><strong>Role:</strong> Full-Stack Developer, AI Content Creator, <strong>SEO Content Specialist</strong>, AI-Powered Journalist<a href="https://sports-tube-community.netlify.app/" style="text-decoration: underline;">Sports Tube Community</a></p>
                   <p><strong>GitHub Repository: </strong><a href="https://github.com/Allison2002/sports_tube_community.git">View the Code</a></p>
                 </div>
                 <hr>
@@ -699,7 +696,7 @@
                   <h3>Development Process</h3>
                   <ul>
                     <li><strong>Technology Stack:</strong> HTML, CSS, JavaScript, hosted on Netlify for efficient deployment.</li>
-                    <li><strong>Performance Optimization:</strong> Used next-gen formats (WebP) and image-specific resolutions to reduce load times.</li>
+                    <li><strong>Performance Optimization:</strong> Used next-gen formats (WebP) and image-specific resolutions to reduce load times and support a <strong>fast-loading website design</strong>.</li>
                     <li><strong>Accessibility Compliance:</strong> Designed with WCAG standards, implementing proper contrast ratios, semantic HTML, and ARIA roles.</li>
                     <li><strong>Responsive Design:</strong> Ensured seamless performance across devices with a mobile-first approach.</li>
                   </ul>
@@ -741,7 +738,7 @@
                 <hr>
                 <div class="list-items casestudy">
                   <h3>Outcome</h3>
-                  <p>The Sports Tube Community exemplifies my ability to merge AI-driven tools, SEO strategies, and storytelling expertise into a cohesive platform. This project reflects my expertise in AI content creation, SEO optimization, and responsive web design while achieving exceptional performance:</p>
+                  <p>The Sports Tube Community exemplifies my ability to merge AI-driven tools, SEO strategies, and storytelling expertise into a cohesive platform. This case study is a featured project in my AI content creation portfolio, highlighting my expertise in blending artificial intelligence with strategic SEO and responsive design:</p>
                   <ul>
                     <li><strong>AI Integration:</strong> Articles and visuals created with AI tools like ChatGPT and MidJourney, refined to maximize engagement and impact.</li>
                     <li><strong>SEO Expertise:</strong> Optimized using tools like SEMrush and Ahrefs, achieving top rankings for high-value keywords and focus terms.</li>
