updated project 1 to mimic project 3

--- a/assets/footer.html
+++ b/assets/footer.html
@@ -37,51 +37,28 @@
         <div class="social-media">
           <ul>
             <li>
-              <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile" role="link">
-                <img src="/img/x-icon.png"
-                  alt="Facebook logo" 
-                  type="image/avif"
-                  width="Twitter logo";
-                  height="auto"; 
-                  style="aspect-ratio: 0.484 / 1; object-fit: cover;"
-                >
+              <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile">
+                <img src="/img/x-icon.png" alt="X (Twitter) logo">
               </a>
             </li>
             <li>
-              <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my X (formerly Twitter) profile" role="link">
-                <img src="/img/ig-icon.png"
-                  alt="Instagram logo" 
-                  type="image/avif"
-                  width="Twitter icon";
-                  height="auto";
-                  style="aspect-ratio: 0.484 / 1; object-fit: cover;"
-                >
+              <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my Instagram profile">
+                <img src="/img/ig-icon.png" alt="Instagram logo">
               </a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my X (formerly Twitter) profile" role="link">
-                <img src="/img/linkedin-icon.png"
-                  alt="Linked In logo" 
-                  type="image/avif"
-                  width="Twitter icon";
-                  height="auto";
-                  style="aspect-ratio: 0.484 / 1; object-fit: cover;"
-                >
+              <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my LinkedIn profile">
+                <img src="/img/linkedin-icon.png" alt="LinkedIn logo">
               </a>
             </li>
             <li>
-              <a href="https://github.com/Allison2002" class="links" aria-label="Visit my X (formerly Twitter) profile" role="link">
-                <img src="/img/git-icon.png"
-                  alt="Github logo" 
-                  type="image/avif"
-                  width="Twitter icon";
-                  height="auto";
-                  style="aspect-ratio: 0.484 / 1; object-fit: cover;"
-                >
+              <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile">
+                <img src="/img/git-icon.png" alt="GitHub logo">
               </a>
             </li>
           </ul>
         </div>
+
       </footer>
     </header>
     <script src="/designer.js"></script>
