--- a/pages/project4.html
+++ b/pages/project4.html
@@ -25,7 +25,7 @@
         </div>
       </div>
     </header>
-    <main class="about-me">
+    <main class="about-me" id="projects">
         <!--resume-->        
       <div class="black-container">
         <div>
