--- a/pages/about.html
+++ b/pages/about.html
@@ -28,18 +28,25 @@
           </div>
           <div class="section2">
             <div class="portfolio-name">
-              <img src="/img/portfolio-name-cyan.png" alt="decorative name of site owner created on canva">
+              <img src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1746546707/genny_allison_portfolio_transparent_pojusr.avif"
+                alt="decorative name of site owner created on canva"
+                width="168"
+                height="90"
+                loading="eager"
+                fetchpriority="high"
+                style="object-fit: cover;"
+                decoding="async"
+              >
             </div>
           </div>
         </div> 
       </section>
-
       <section class="about--me-container">
         <!--ABOUT ME-->
           <div class="greetings-label">
             <h2>about me</h2>
           </div>
-          <div class="black-container">
+          <div class="black-container" id="about-me-black-container">
             <article class="greetings">
               <p>Hello! I'm Genny Allison, a passionate Full Stack Developer with a natural affinity for technology and creative expression. My journey into the digital world has been diverse, starting as a Floral Buyer for a large food distribution company, then moving into the role of Finance Director for a Water Purification Company. I eventually owned and operated my own daycare for 10 years, allowing me the flexibility to raise my children while managing a business. Along the way, I ventured into the world of drop shipping, where I created all product designs using tools like Canva, Adobe Photoshop, Kittl, Figma, and my own photography. This experience not only honed my design skills but also taught me how to blend creativity with strategic business acumen, ensuring that my products were both visually appealing and marketable.
 
