--- a/pages/project2.html
+++ b/pages/project2.html
@@ -64,7 +64,7 @@
         </div>
       </div>
     </header>
-    <main class="about-me">
+    <main class="about-me" id="projects">
         <!--resume-->        
       <div class="black-container">
         <div class="main-container">
