--- a/pages/skills.html
+++ b/pages/skills.html
@@ -6,9 +6,26 @@
     <title>Genny Allison | Front End Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Discover Genny Allison's technical and creative skills, from responsive web design and front-end development to UI/UX, graphic design, and coding languages. This skills showcase reflects a blend of artistic imagination and technical expertise, supporting a seamless, user-focused digital experience." />
-    <link class="tab-logo" rel="icon" href="/img/white_favicon/favicon.ico" type="image/icon type">
-    <link rel="stylesheet" href="/styles.css">
-    <link href="https://fonts.cdnfonts.com/css/tt-norms-pro" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+    <link 
+      rel="preload" 
+      href="/assets/fonts/TT-Norms-Pro-Regular.woff2"
+      as="font" 
+      type="font/woff2" 
+      crossorigin="anonymous"
+    />
+
+
+    <link
+      rel="icon"
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1746540357/apple-touch-icon_inwuoa.webp"
+      type="image/webp"
+    />
+
+    <link rel="preload" href="/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
+    <noscript><link rel="stylesheet" href="/styles.css"></noscript>
   </head>
   <body>
     <section>
@@ -31,90 +48,90 @@
           <div class="skills-container">
             <div class="skills-grid skills-black-container">
               <div class="skills-row">
-                <div class="skills skills4 skills-firstset tooltip">
+                <div class="skills skills4 skills-firstset tooltip" tabindex="0">
                   <h4 class="skills-text">SEO Optimization</h4>
                   <span class="tooltip-text">Proficient in optimizing websites for search engines using keyword research, on-page SEO, link building, and analytics tools like Google Search Console, SEMrush, and Google Analytics to boost visibility and rankings.</span>
                 </div>
-                <div class="skills skills0 skills-firstset tooltip">
+                <div class="skills skills0 skills-firstset tooltip" tabindex="0">
                   <h4 class="skills-text">AI Content Creation</h4>
                   <span class="tooltip-text">Skilled in leveraging AI tools like ChatGPT and Jasper to create high-quality, SEO-friendly articles and content that engage audiences and enhance online presence.</span>
                 </div>
-                <div class="skills skills1 tooltip">
+                <div class="skills skills1 tooltip" tabindex="0">
                   <h4 class="skills-text">AI Image Generation</h4>
                   <span class="tooltip-text">Proficient in using AI image generation tools like Midjourney and DALL·E to create unique and high-quality images for websites, blogs, and social media, enhancing visual storytelling.</span>
                 </div>
-                <div class="skills-secondset skills2 tooltip">
+                <div class="skills-secondset skills2 tooltip" tabindex="0">
                   <h4 class="skills-text">AI Journalism</h4>
                   <span class="tooltip-text">Expert in utilizing AI for generating data-driven articles, automating content creation, and tailoring pieces for specific audiences, streamlining the journalistic process.</span>
                 </div>
-                <div class="skills-secondset skills3 tooltip">
+                <div class="skills-secondset skills3 tooltip" tabindex="0">
                   <h4 class="skills-text">Responsive Design</h4>
                   <span class="tooltip-text">Crafting flexible, mobile-first websites that adapt seamlessly to any screen size, ensuring optimal user experience across devices.</span>
                 </div>
               </div>
               <div class="skills-row">
-                <div class="skills skills4 skills-firstset tooltip">
+                <div class="skills skills4 skills-firstset tooltip" tabindex="0">
                   <h4 class="skills-text">HTML</h4>
                   <span class="tooltip-text">HTML is the standard markup language for documents designed to be displayed in a web browser.</span>
                 </div>
                 
-                <div class="skills skills5 skills-firstset tooltip">
+                <div class="skills skills5 skills-firstset tooltip" tabindex="0">
                   <h4 class="skills-text">UI/UX</h4>
                   <span class="tooltip-text">Skilled in designing intuitive, user-centric interfaces and seamless user experiences, focusing on accessibility, usability, and aesthetics for both web and mobile platforms.</span>
                 </div>
-                <div class="skills skills5 skills-firstset tooltip">
+                <div class="skills skills5 skills-firstset tooltip" tabindex="0">
                   <h4 class="skills-text">CSS</h4>
                   <span class="tooltip-text">Expert in using CSS to create visually appealing, responsive, and interactive web layouts, ensuring consistent styling across devices and browsers.</span>
                 </div>
-                <div class="skills skills7 skills-firstset tooltip">
+                <div class="skills skills7 skills-firstset tooltip" tabindex="0">
                   <h4 class="skills-text">Midjourney</h4>
                   <span class="tooltip-text">Skilled in using Midjourney to generate AI-driven visual content, transforming creative concepts into stunning images for digital projects.</span>
                 </div>
-                <div class="skills skills8 skills-firstset tooltip">
+                <div class="skills skills8 skills-firstset tooltip" tabindex="0">
                   <h4 class="skills-text">Figma</h4>
                   <span class="tooltip-text">Proficient in using Figma to design user interfaces and prototypes, ensuring seamless collaboration and efficient design workflows.</span>
                 </div>
               </div>
               <div class="skills-row">
-                <div class="skills skills9 skills-firstset tooltip">
+                <div class="skills skills9 skills-firstset tooltip" tabindex="0">
                   <h4 class="skills-text">Adobe Photoshop</h4>
                   <span class="tooltip-text">Expert in Adobe Photoshop for high-quality image editing, retouching, and creating visually compelling graphics for web and digital media.</span>
                 </div>
-                <div class="skills skills10 skills-firstset tooltip">
+                <div class="skills skills10 skills-firstset tooltip" tabindex="0">
                   <h4 class="skills-text">Canva</h4>
                   <span class="tooltip-text">Proficient in Canva for creating visually appealing graphics, presentations, and social media content with ease and efficiency.</span>
                 </div>
-                <div class="skills-secondset skills11 tooltip">
+                <div class="skills-secondset skills11 tooltip" tabindex="0">
                   <h4 class="skills-text">Web Development</h4>
                   <span class="tooltip-text">Skilled in building responsive, user-friendly websites using modern web technologies like HTML, CSS, JavaScript, and frameworks to deliver seamless digital experiences.</span>
                 </div>
-                <div class="skills skills12 skills-firstset tooltip">
+                <div class="skills skills12 skills-firstset tooltip" tabindex="0">
                   <h4 class="skills-text">Python</h4>
                   <span class="tooltip-text">Proficient in Python for building scalable applications, data analysis, automation, and backend development, with a focus on clean, efficient code.</span>
                 </div>
-                <div class="skills skills13 skills-firstset tooltip">
+                <div class="skills skills13 skills-firstset tooltip" tabindex="0">
                   <h4 class="skills-text">Wireframe</h4>
                   <span class="tooltip-text">Experienced in creating wireframes to structure user interfaces, ensuring intuitive layouts and a seamless user experience for web and mobile applications.</span>
                 </div>
               </div>
               <div class="skills-row">
-                <div class="skills skills14 skills-firstset tooltip">
+                <div class="skills skills14 skills-firstset tooltip" tabindex="0">
                   <h4 class="skills-text">JavaScript</h4>
                   <span class="tooltip-text">Proficient in JavaScript for adding interactivity to websites, including dynamic content, form validation, animations, and enhancing overall user experience.</span>
                 </div>
-                <div class="skills-secondset skills15 tooltip">
+                <div class="skills-secondset skills15 tooltip" tabindex="0">
                   <h4 class="skills-text">Front End</h4>
                   <span class="tooltip-text">Skilled in front-end development, utilizing HTML, CSS, and JavaScript to create visually appealing, user-friendly, and responsive web interfaces.</span>
                 </div>
-                <div class="skills skills16 skills-firstset tooltip">
+                <div class="skills skills16 skills-firstset tooltip" tabindex="0">
                   <h4 class="skills-text">WordPress</h4>
                   <span class="tooltip-text">Proficient in using WordPress to design and develop dynamic websites with customizable themes, plugins, and content management features for seamless user experience.</span>
                 </div>
-                <div class="skills skills17 skills-firstset tooltip">
+                <div class="skills skills17 skills-firstset tooltip" tabindex="0">
                   <h4 class="skills-text">GitHub</h4>
                   <span class="tooltip-text">Experienced with GitHub for version control, collaboration, and managing code repositories, ensuring efficient team workflows and project management.</span>
                 </div>
-                <div class="skills-secondset skills18 tooltip">
+                <div class="skills-secondset skills18 tooltip" tabindex="0">
                   <h4 class="skills-text">Back End</h4>
                   <span class="tooltip-text">Proficient in server-side development, managing databases, and building APIs to create robust and scalable web applications.</span>
                 </div>
