updated preload links, alt tags, and side menu id links

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -16,7 +16,7 @@
 
     <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_2136,dpr_auto,fl_lossy,fl_force_strip/v1733410752/girlCoding_exzsbe.avif" as="image" type="image/avif" width="712" height="406" />
 
-    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1746586854/sports-tube-community-page_rvnfya.avif" as="image" type="image/avif" width="500" height="410" />
+    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1746863080/welcome_to_tech_trends_project1_tg2tfj.avif" as="image" type="image/avif" width="500" height="410" />
 
     <link
       rel="icon"
@@ -69,7 +69,7 @@
               <div class="mood-board">
                 <div class="border-white">
                   <img 
-                    src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1746863080/welcome_to_tech_trends_project1_tg2tfj.webp"
+                    src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1746863080/welcome_to_tech_trends_project1_tg2tfj.avif"
                     alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
                     width="561"
                     height="460"
@@ -321,7 +321,7 @@
                             loading="lazy"
                             fetchpriority="low"
                             style="object-fit: cover;aspect-ratio: 473 / 480;"
-                            decoding="async"               
+                            decoding="async"
                           />
                         </div>
                       </div>
@@ -335,6 +335,7 @@
                           <img
                             src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_1419,dpr_auto,fl_lossy,fl_force_strip/v1742916682/tech-trends-finish-mobile_ca3hzy.avif"
                             class="hero-image"
+                            alt="PageSpeed Insights comparison showing the website's performance after optimization"
                             width="473"
                             height="480"
                             loading="lazy"
@@ -512,6 +513,7 @@
                       <div class="border-white">
                         <img 
                           src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1742921595/category-wireframe-tech-trends_vc1nvg.png"
+                          alt="Wireframe of the homepage layout for Tech Trends Blog"
                           object-fit="cover"
                           width="501"
                           height="797"
@@ -729,8 +731,8 @@
     <div id="side-nav" class="hidden">
       <ul>
         <li><a href="#description">introduction</a></li>
-        <li><a href="#grade">the grade</a></li>
-        <li><a href="#design">the design</a></li>
+        <li><a href="#the-grade">the grade</a></li>
+        <li><a href="#the-design">the design</a></li>
         <li><a href="#wireframe">the wireframe</a></li>
         <li><a href="#casestudy">the case study</a></li>
         <li><a href="#contact">the contact me</a></li>
