--- a/pages/project3.html
+++ b/pages/project3.html
@@ -336,53 +336,53 @@
                   <div class="grade-header"><h3>accessibility</h3></div>
                   <div class="grade-header"><h3>best practices</h3></div>
                   <div class="grade-header"><h3>seo</h3></div>
-                    <div class="grade-item"><h3>homepage</h3></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><h3>homepage</h3></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
 
-                    <div class="grade-item"><h3>all category pages</h3></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><h3>all category pages</h3></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
 
-                    <div class="grade-item"><h3>category page</h3></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><h3>category page</h3></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
 
-                    <div class="grade-item"><h3>category page</h3></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><h3>category page</h3></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
 
-                    <div class="grade-item"><h3>article page</h3></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><h3>article page</h3></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
 
-                    <div class="grade-item"><h3>upload page</h3></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><h3>upload page</h3></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
 
-                    <div class="grade-item"><h3>log in page</h3></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><h3>log in page</h3></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
 
-                    <div class="grade-item"><h3>privacy policy</h3></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>   
+                  <div class="grade-item"><h3>privacy policy</h3></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>
+                  <div class="grade-item"><p>100</p></div>   
                 </div>
                 <div class="pagespeed-container">
                   <div class="pagespeed-grade-title">
@@ -858,8 +858,8 @@
     <div id="side-nav" class="hidden">
       <ul>
         <li><a href="#description">introduction</a></li>
-        <li><a href="#grade">the grade</a></li>
-        <li><a href="#design">the design</a></li>
+        <li><a href="#the-grade">the grade</a></li>
+        <li><a href="#the-design">the design</a></li>
         <li><a href="#wireframe">the wireframe</a></li>
         <li><a href="#casestudy">the case study</a></li>
         <li><a href="#contact">the contact me</a></li>
