changed first image to load eager

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -73,8 +73,8 @@
                     alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
                     width="561"
                     height="460"
-                    loading="lazy"
-                    fetchpriority="low"
+                    loading="eager"
+                    fetchpriority="high"
                     style="object-fit: cover;aspect-ratio: 500 / 410;"
                     decoding="async" 
                   >
