changed the image back to lazy load

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -16,8 +16,6 @@
 
     <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_2136,dpr_auto,fl_lossy,fl_force_strip/v1733410752/girlCoding_exzsbe.avif" as="image" type="image/avif" width="712" height="406" />
 
-    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1746863080/welcome_to_tech_trends_project1_tg2tfj.avif" as="image" type="image/avif" width="500" height="410" />
-
     <link
       rel="icon"
       href="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1746540357/apple-touch-icon_inwuoa.webp"
@@ -73,8 +71,8 @@
                     alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
                     width="561"
                     height="460"
-                    loading="eager"
-                    fetchpriority="high"
+                    loading="lazy"
+                    fetchpriority="low"
                     style="object-fit: cover;aspect-ratio: 500 / 410;"
                     decoding="async" 
                   >
