resized header image and first body image

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -39,23 +39,23 @@
         <div class="canvas-skills-img">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_2136,dpr_auto,fl_lossy,fl_force_strip/v1747000217/girlCoding-desktop_o7t7xg.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_2136,dpr_auto,fl_lossy,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif"
               media="(max-width: 768px)"
-              width="492"
-              height="278"
+              width="498" 
+              height="281"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_2136,dpr_auto,fl_lossy,fl_force_strip/v1747000217/girlCoding-tablet_pvmfth.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_2136,dpr_auto,fl_lossy,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif"
               media="(max-width: 1024px)"
-              width="752"
-              height="434"
+              width="768"
+              height="437"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_2136,dpr_auto,fl_lossy,fl_force_strip/v1747000217/girlCoding-mobile_qyo0vo.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_2136,dpr_auto,fl_lossy,fl_force_strip/v1747014136/girlCoding-mobile_ggxuht.avif"
               alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
-              width="474"
-              height="274"
-              style="object-fit: cover;"
+              width="480"
+              height="273"
+              style="object-fit: cover; asepct-ratio: 480 / 372"
               loading="eager"
               fetchpriority="high"
               importance="high"
@@ -82,17 +82,17 @@
               <div class="mood-board">
                 <div class="border-white">
                   <img
-                    src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1746863080/welcome_to_tech_trends_project1_tg2tfj.avif"
+                    src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.avif"
                     srcset="
-                      https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_320,dpr_auto,fl_lossy,fl_force_strip/v1746863080/welcome_to_tech_trends_project1_tg2tfj.avif 320w,
-                      https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_480,dpr_auto,fl_lossy,fl_force_strip/v1746863080/welcome_to_tech_trends_project1_tg2tfj.avif 480w,
-                      https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_940,dpr_auto,fl_lossy,fl_force_strip/v1746863080/welcome_to_tech_trends_project1_tg2tfj.avif 940w
+                      https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_320,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.avif 320w,
+                      https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_480,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.avif 480w,
+                      https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_940,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.avif 940w
                     "
                     sizes="(max-width: 768px) 100vw, 748px"
                     alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
-                    width="940"
-                    height="788"
-                    style="aspect-ratio: 500 / 410; width: 500; height: 410; object-fit: cover; display: block;"
+                    width="748"
+                    height="400"
+                    style="aspect-ratio: 748 / 400; width: 500; height: 410; object-fit: cover; display: block;"
                     loading="lazy"
                     decoding="async"
                   />
