--- a/pages/project1.html
+++ b/pages/project1.html
@@ -110,12 +110,11 @@
               sizes="100vw"
             />
             <img 
-            
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1747014136/girlCoding-mobile_ggxuht.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1404,dpr_auto,fl_lossy,fl_force_strip/v1747014136/girlCoding-mobile_ggxuht.avif"
               alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
-              width="498"
-              height="281"
-              style="object-fit: cover; aspect-ratio: 498 / 281; width: 100%; height: auto;"
+              width="468"
+              height="262"
+              style="object-fit: cover; aspect-ratio: 468 / 262; width: 100%; height: auto;"
               loading="eager"
               fetchpriority="high"
               importance="high"
@@ -153,11 +152,12 @@
                       type="image/avif"
                     />
                     <img 
-                      src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1747049370/welcome_to_tech_trends_mobile_z4ngfo.avif"
-                      alt="ech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
-                      width="498"
-                      height="281"
-                      style="aspect-ratio: 748 / 400; width: 500; height: 410; object-fit: cover; display: block;"
+                      src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_969,dpr_auto,fl_lossy,fl_force_strip/v1747049370/welcome_to_tech_trends_mobile_z4ngfo.avif"
+                      alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
+                      type="image/avif"
+                      width="323"
+                      height="165"
+                      style="aspect-ratio: 323 / 165; object-fit: cover; display: block;"
                       loading="eager"
                       fetchpriority="high"
                       importance="high"
