changed inline style for hero img

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -155,12 +155,11 @@
                       src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_969,dpr_auto,fl_lossy,fl_force_strip/v1747049370/welcome_to_tech_trends_mobile_z4ngfo.avif"
                       alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
                       type="image/avif"
-                      width="323"
-                      height="165"
-                      style="aspect-ratio: 323 / 165; object-fit: cover; display: block;"
-                      loading="eager"
-                      fetchpriority="high"
-                      importance="high"
+                      width="468" 
+                      height="262" 
+                      style="aspect-ratio: 468 / 262; width: 100%; height: auto; object-fit: cover;" 
+                      loading="eager" 
+                      fetchpriority="high" 
                       decoding="async"
                     />
                   </picture>
