--- a/pages/project1.html
+++ b/pages/project1.html
@@ -114,7 +114,7 @@
               alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
               width="468"
               height="262"
-              style="object-fit: cover; aspect-ratio: 468 / 262; width: 100%; height: auto;"
+              style="object-fit: cover; aspect-ratio: 468 / 262;"
               loading="eager"
               fetchpriority="high"
               importance="high"
@@ -155,9 +155,9 @@
                       src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_969,dpr_auto,fl_lossy,fl_force_strip/v1747049370/welcome_to_tech_trends_mobile_z4ngfo.avif"
                       alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
                       type="image/avif"
-                      width="468" 
-                      height="262" 
-                      style="aspect-ratio: 468 / 262; width: 100%; height: auto; object-fit: cover;" 
+                      width="323" 
+                      height="165" 
+                      style="aspect-ratio: 1.957   / 1;  object-fit: cover;" 
                       loading="eager" 
                       fetchpriority="high" 
                       decoding="async"
