--- a/pages/project1.html
+++ b/pages/project1.html
@@ -113,8 +113,8 @@
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1404,dpr_auto,fl_lossy,fl_force_strip/v1747014136/girlCoding-mobile_ggxuht.avif"
               alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
               width="468"
-              height="262"
-              style="object-fit: cover; aspect-ratio: 468 / 262;"
+              height="261"
+              style="object-fit: cover; aspect-ratio: 1.79 / 1;"
               loading="eager"
               fetchpriority="high"
               importance="high"
@@ -140,7 +140,7 @@
             <div class="resume-border">
               <div class="mood-board">
                 <div class="border-white">
-                <picture>
+                  <picture>
                     <source
                       srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_480,dpr_auto,fl_lossy,fl_force_strip/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
                       media="(max-width: 768px)"
@@ -216,8 +216,8 @@
                     sizes="(max-width: 768px) 100vw, 748px"
                     alt="Tech Trends Blog SEO grade result showing performance and optimization"
                     width="940"
-                    height="788"
-                    style="aspect-ratio: 500 / 450; width: 500; height: 450; object-fit: cover; display: block;"
+                    height="100%"
+                    style="aspect-ratio: 1.16 / 1; object-fit: cover; display: block;"
                     loading="lazy"
                     decoding="async"
                   />
@@ -475,46 +475,48 @@
           </section>
           <section id="the-author">
             <article class="resume-border">
-              <div class="author-bio">
-                <img         
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_1593,dpr_auto,fl_lossy,fl_force_strip/v1746550616/allisonstock-black-logo_yalqqx.avif"
-                  alt="Photo of Genny Allison, the web developer and AI content specialist"
-                  width="531"
-                  height="255"
-                  loading="lazy"
-                  fetchpriority="low"
-                  style="object-fit: cover;aspect-ratio: 531 / 255;"
-                  decoding="async" 
-                />
-                <div class="author-bio-text">
-                    <p><i>Curious about your website's performance?</i></p> 
-                    <p><i>Visit
-                      <a
-                        href="https://website.grader.com/?__hstc=20629287.7b5da137d6ae3b82197a3c1b6c098d04.1731428252014.1732338211911.1732940777826.11&__hssc=20629287.5.1732940777826&__hsfp=2673780978"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        aria-label="Visit Website Grader on a new tab"
-                        >Page Speed Insights</a
+              <div class="border-white">
+                <div class="author-bio">
+                  <img         
+                    src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_1593,dpr_auto,fl_lossy,fl_force_strip/v1746550616/allisonstock-black-logo_yalqqx.avif"
+                    alt="Photo of Genny Allison, the web developer and AI content specialist"
+                    width="531"
+                    height="255"
+                    loading="lazy"
+                    fetchpriority="low"
+                    style="object-fit: cover;aspect-ratio: 531 / 255;"
+                    decoding="async" 
+                  />
+                  <div class="author-bio-text">
+                      <p><i>Curious about your website's performance?</i></p> 
+                      <p><i>Visit
+                        <a
+                          href="https://website.grader.com/?__hstc=20629287.7b5da137d6ae3b82197a3c1b6c098d04.1731428252014.1732338211911.1732940777826.11&__hssc=20629287.5.1732940777826&__hsfp=2673780978"
+                          target="_blank"
+                          rel="noopener noreferrer"
+                          aria-label="Visit Website Grader on a new tab"
+                          >Page Speed Insights</a
+                        >
+                        or
+                        <a
+                          href="https://website.grader.com/?__hstc=20629287.7b5da137d6ae3b82197a3c1b6c098d04.1731428252014.1732338211911.1732940777826.11&__hssc=20629287.5.1732940777826&__hsfp=2673780978"
+                          >Hubspot</a
+                        >
+                        to check your site's grade.</i></p>
+                        <p><i> If you're not happy with the
+                        results,<br />
+                        <a
+                          href="/pages/contact.html"
+                          target="_blank"
+                          rel="noopener noreferrer"
+                          aria-label="Open Contact page"
+                          >reach out to me</a
+                        >.</i></p>
+                        <p><i> Together, we can optimize your site for better
+                        performance and results.</i
                       >
-                      or
-                      <a
-                        href="https://website.grader.com/?__hstc=20629287.7b5da137d6ae3b82197a3c1b6c098d04.1731428252014.1732338211911.1732940777826.11&__hssc=20629287.5.1732940777826&__hsfp=2673780978"
-                        >Hubspot</a
-                      >
-                      to check your site's grade.</i></p>
-                      <p><i> If you're not happy with the
-                      results,<br />
-                      <a
-                        href="/pages/contact.html"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        aria-label="Open Contact page"
-                        >reach out to me</a
-                      >.</i></p>
-                      <p><i> Together, we can optimize your site for better
-                      performance and results.</i
-                    >
-                  </p>
+                    </p>
+                  </div>
                 </div>
               </div>
             </article>
@@ -796,33 +798,35 @@
               </article>
             </div>
           </section>
-          <section id="cta">
-            <article class="resume-border" id="contact">
-              <div class="author-bio">
-                <img
-                  src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_1593,dpr_auto,fl_lossy,fl_force_strip/v1746550616/allisonstock-black-logo_yalqqx.avif"
-                  alt="Photo of Genny Allison, the web developer and AI content specialist"
-                  width="768"
-                  height="337"
-                  loading="lazy"
-                  fetchpriority="low"
-                  style="object-fit: cover;aspect-ratio: 768 / 337;"
-                  decoding="async" 
-                />
-                <div class="author-bio-text">
-                  <h2>Partner with an AI Content Specialist & Web Developer</h2>
-                  <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
-                  <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
-                  <p>
-                    <a href="https://www.linkedin.com/in/genny-allison/" 
-                      target="_blank" 
-                      rel="noopener noreferrer" 
-                      aria-label="Visit Genny Allison's LinkedIn on a new tab">Connect with me on LinkedIn
-                    </a>, 
-                    <a href="https://gennyallison.netlify.app"
-                      target="_blank" 
-                      rel="noopener noreferrer" aria-label="Visit Genny Allison's professional portfolio on a new tab"
-                      >explore my portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.</p>
+          <section id="contact">
+            <article class="resume-border">
+              <div class="border-white">
+                <div class="author-bio">
+                  <img
+                    src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_1593,dpr_auto,fl_lossy,fl_force_strip/v1746550616/allisonstock-black-logo_yalqqx.avif"
+                    alt="Photo of Genny Allison, the web developer and AI content specialist"
+                    width="768"
+                    height="337"
+                    loading="lazy"
+                    fetchpriority="low"
+                    style="object-fit: cover;aspect-ratio: 768 / 337;"
+                    decoding="async" 
+                  />
+                  <div class="author-bio-text">
+                    <h2>Partner with an AI Content Specialist & Web Developer</h2>
+                    <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
+                    <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
+                    <p>
+                      <a href="https://www.linkedin.com/in/genny-allison/" 
+                        target="_blank" 
+                        rel="noopener noreferrer" 
+                        aria-label="Visit Genny Allison's LinkedIn on a new tab">Connect with me on LinkedIn
+                      </a>, 
+                      <a href="https://gennyallison.netlify.app"
+                        target="_blank" 
+                        rel="noopener noreferrer" aria-label="Visit Genny Allison's professional portfolio on a new tab"
+                        >explore my portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.</p>
+                  </div>
                 </div>
               </div>
             </article>
