replaced social media icons with webp

--- a/assets/footer.html
+++ b/assets/footer.html
@@ -38,22 +38,22 @@
           <ul>
             <li>
               <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile">
-                <img src="/img/x-icon.png" alt="X (Twitter) logo">
+                <img src="/img/x-bird-icon.webp" alt="X (Twitter) logo">
               </a>
             </li>
             <li>
               <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my Instagram profile">
-                <img src="/img/ig-icon.png" alt="Instagram logo">
+                <img src="/img/ig-icon.webp" alt="Instagram logo">
               </a>
             </li>
             <li>
               <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my LinkedIn profile">
-                <img src="/img/linkedin-icon.png" alt="LinkedIn logo">
+                <img src="/img/linkedin-icon.webp" alt="LinkedIn logo">
               </a>
             </li>
             <li>
               <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile">
-                <img src="/img/git-icon.png" alt="GitHub logo">
+                <img src="/img/git-icon.webp" alt="GitHub logo">
               </a>
             </li>
           </ul>
