--- a/assets/nav.html
+++ b/assets/nav.html
@@ -48,11 +48,10 @@
             alt="Hamburger Icon Menu"
             class="hamburger-icon"
             width="32"
-            height="auto"
+            height="32"
             loading="eager"
             fetchpriority="high"
-            object-fit="cover"
-            aspect-ratio="1 / 1"
+            style="aspect-ratio: 1 / 1; object-fit: cover;"
           />
         </div>
 
