added font loading

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -7,26 +7,21 @@
     <meta name="description" content="Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions. Discover the blend of artistry and functionality across a range of digital creations.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
 
-    <link 
-      rel="preload" 
-      href="/assets/fonts/TT-Norms-Pro-Regular.woff2"
-      as="font" 
-      type="font/woff2" 
-      crossorigin="anonymous"
-    />
+    <link rel="preload" href="/assets/fonts/PlayfairDisplay/PlayfairDisplay-VariableFont_wght.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    
+    <link rel="preload" href="/assets/fonts/TT-Norms-Pro-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
+    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill/v1747014137/girlCoding-desktop_qjepoe.avif" as="image" type="image/avif" media="(min-width: 1200px)">
 
-    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif" as="image" type="image/avif" media="(min-width: 1200px)">
+    <link rel="preload"href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill/v1747014135/girlCoding-tablet_uund2i.avif" as="image" type="image/avif" media="(min-width: 481px) and (max-width: 1199px)">
 
-    <link rel="preload"href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif" as="image" type="image/avif" media="(min-width: 481px) and (max-width: 1199px)">
+    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill/v1747014136/girlCoding-mobile_ggxuht.avif" as="image" type="image/avif" media="(max-width: 480px)">
 
-    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014136/girlCoding-mobile_ggxuht.avif" as="image" type="image/avif" media="(max-width: 480px)">
+    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" as="image" type="image/avif" media="(min-width: 1200px)">
 
-    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" as="image" type="image/avif" media="(min-width: 1200px)">
+    <link rel="preload"href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" as="image" type="image/avif" media="(min-width: 481px) and (max-width: 1199px)">
 
-    <link rel="preload"href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif" as="image" type="image/avif" media="(min-width: 481px) and (max-width: 1199px)">
-
-    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1746786837/welcome_to_tech_trends_mobile_ekfngl.avif" as="image" type="image/avif" media="(max-width: 480px)">
+    <link rel="preload" href="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill/v1746786837/welcome_to_tech_trends_mobile_ekfngl.avif" as="image" type="image/avif" media="(max-width: 480px)">
 
     <link
       rel="icon"
@@ -35,6 +30,7 @@
     />
 
     <link rel="stylesheet" href="/styles.css" media="print" onload="this.onload=null;this.media='all';">
+
     <noscript><link rel="stylesheet" href="/styles.css"></noscript>
 
     <script type="application/ld+json">
@@ -97,20 +93,20 @@
         <div class="canvas-skills-img">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014137/girlCoding-desktop_qjepoe.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill/v1747014137/girlCoding-desktop_qjepoe.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
               fetchpriority="high"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014135/girlCoding-tablet_uund2i.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill/v1747014135/girlCoding-tablet_uund2i.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747014136/girlCoding-mobile_ggxuht.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill/v1747014136/girlCoding-mobile_ggxuht.avif"
               alt="A woman coding on a laptop, symbolizing the integration of creativity and technology in web development"
               width="468"
               height="256"
@@ -142,17 +138,17 @@
                 <div class="border-white">
                   <picture>
                     <source
-                      srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
+                      srcset="https://res.cloudinary.com/dnptzisuf/image/uploadf_avif,q_auto,w_auto,c_fill/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
                       media="(max-width: 768px)"
                       type="image/avif"
                     />
                     <source
-                      srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif"
+                      srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill/v1747049367/welcome_to_tech_trends_tablet_da4vul.avif"
                       media="(max-width: 1024px)"
                       type="image/avif"
                     />
                     <img 
-                      src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,c_fill,w_auto,dpr_auto,fl_lossy,fl_force_strip/v1746786837/welcome_to_tech_trends_mobile_ekfngl.avif"
+                      src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,w_auto,c_fill/v1746786837/welcome_to_tech_trends_mobile_ekfngl.avif"
                       alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals and the blog's name, highlighting AI-driven content creation and insights on emerging technology trends"
                       type="image/avif"
                       width="323" 
